- on macOS, the high throughput workflow crashes when watchdog and opencv interact ("segmentation fault")

5.0.0
-----
breaking:
	- removed old plugin-module, now standalone package (pip install phenopype-plugins). 
		- new plugin for pytorch and ultralytics (fastSAM)  
		- each plugin-functions has its own dependency, which by itself will not hinder module installation ("opportunistic loading")
bugfix:
	- edit_contours: drawing was not in place when using zoom memory
	- fastSAM plugin now uses correct prompts ("everything" and "box")
- new class: Project_labelling: high throughput labeling of individual images without invoking the Pype class. has full GUI capabilities (e.g., zoom, rectangle mask, comments). 
- new training data export: pytorch segmentation models
- proper logger for Pype in place, saves to each image dir 

--------------------------------------------------------------------------------------------

4.1.1
-----
bugfix:
	- no empty annotations!
	
4.1.0
-----
bugfix:
	- fix draw QR-code mask
	- fix new faster thresholding
- new plugin: predict_SAM uses the fastSAM model for prompt based image segmentation
- new function: draw_comment prints comments added via write_comment or detect_QRcode
- changed dependency: pyradiomics==3.1.0

4.0.0
-----
- phenopype now requires python 3.9.* and opencv-contrib-python 4.5.2.54
- new function: segmentation.mask_to_contour allows the conversion from a mask to contour
- save_ROI can now export masks as transparent PNGs or with custom background color
- compute_texture_features now can extract features from any range of channels 
- thresholding now operates within masks only, if provided, which is MUCH faster when adaptive mode is used

--------------------------------------------------------------------------------------------

3.4.2
-----
bugfix:
	- detect_reference was stuck in while loop
- scale can now be drawn using the info collected with create_reference

3.4.1
-----
bugfix: