@@ -11,10 +11,10 @@ import numpy as np
 import pandas as pd
 
 from phenopype import __version__
-from phenopype import _config
 from phenopype import _vars
-from phenopype import utils_lowlevel as ul
+from phenopype import config
 from phenopype import utils
+from phenopype import utils_lowlevel as ul
 from phenopype.core import preprocessing
 
 #%% functions
