@@ -9,6 +9,7 @@ breaking:
 	- removed old plugin-module, now standalone package (pip install phenopype-plugins). 
 		- new plugin for pytorch and ultralytics (fastSAM)  
 		- each plugin-functions has its own dependency, which by itself will not hinder module installation ("opportunistic loading")
+	- use phenopype.config to set up session-wise configurations (verbosity, window size, etc.)
 bugfix:
 	- edit_contours: drawing was not in place when using zoom memory
 	- fastSAM plugin now uses correct prompts ("everything" and "box")
